# wifi-with-camera

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/wifi_with_camera/: gui.py  main.py
src/wifi_with_camera/display/: result_display.py
src/wifi_with_camera/network/: base.py  connector.py  linux_nmcli.py  windows_netsh.py
src/wifi_with_camera/parser/: wifi_qr_parser.py
src/wifi_with_camera/scanner/: decoder.py  opencv_scanner.py
src/wifi_with_camera/ui/: simple_window.py
tests/: test_connector.py  test_linux_nmcli.py  test_opencv_scanner.py  test_wifi_qr_parser.py  test_windows_netsh.py
